# portfolio-maker

./: .gitignore  LICENSE  README.md  pyproject.toml
.codex-plugin/: plugin.json
.superpowers/sdd/: task-21-evidence-link-report.md
docs/: DEVELOPMENT_PRINCIPLES.md
docs/reviews/: 2026-07-10-portfolio-maker-0.1.0-final-report.md  2026-07-10-team-based-review-loop-10-initial.md  2026-07-10-team-based-review-loop-10-rereview.md  2026-07-10-team-based-review-loop-11-initial.md  2026-07-10-team-based-review-loop-11-rereview.md  2026-07-10-team-based-review-loop-12-initial.md  2026-07-10-team-based-review-loop-12-rereview.md  2026-07-10-team-based-review-loop-13-preparation.md  2026-07-10-team-based-review-loop-2-rereview.md  2026-07-10-team-based-review-loop-3-rereview.md  2026-07-10-team-based-review-loop-4-rereview.md  2026-07-10-team-based-review-loop-5-rereview.md  2026-07-10-team-based-review-loop-6-rereview.md  (+46 more)
tests/: conftest.py  test_approval.py  test_artifact_approval.py  test_artifacts.py  test_cli.py  test_evidence_selection.py  test_github_connector.py  test_github_private_policy.py  test_ingestion.py  test_issue12_builders.py  test_local_discovery.py  test_plugin_structure.py  test_policy.py  test_profile_and_portfolio.py  test_project_boundary.py  test_project_composition.py  test_project_decisions.py  test_public_portfolio.py  test_render_html.py  test_semantic_acceptance.py  test_semantic_analyzers.py  test_semantic_crawler.py  test_semantic_index.py  test_semantic_models.py  test_sqlite_repository.py  test_static_site.py  test_workflow_docs.py
(+76 files in other folders)
